Fixed followers waiting on socket.io

--- a/server/view/index.html
+++ b/server/view/index.html
@@ -9,5 +9,18 @@
 </head>
 <body>
     <h1>ALTIRE API</h1>
+
+    <div class="routes">
+        <h1>User Routes</h1>
+        <div class="items">
+            <div class="method">POST</div>
+            <div class="route">/signup</div>
+            <div class="body">
+                
+            </div>
+        </div>
+    </div>
+
+    <img src="https://altire.s3.amazonaws.com/profileImage-1641247620970.jpg" alt="hgj" width="200">
 </body>
 </html>
