--- a/server/view/style.css
+++ b/server/view/style.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(#ffb428, #ff5900);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Spline Sans', sans-serif;
     height: 100vh;
     color: #fff;
 }
