--- a/server/view/style.css
+++ b/server/view/style.css
@@ -1,6 +1,19 @@
 body {
-    background: linear-gradient(#ffb428, #ff5900);
-    font-family: 'Spline Sans', sans-serif;
+    background: #f3f3f3;
+    font-family: 'Zen Kaku Gothic Antique', sans-serif;
     height: 100vh;
+    color: #000;
+}
+
+.body {
+    white-space: pre;
+    font-size: 12px;
+    background-color: rgb(10, 19, 29);
     color: #fff;
+    line-height: 1.9em;
+}
+
+.routes {
+    width: 800px;
+    margin: 0 auto;
 }
